# risk-modelling

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: streamlit_app.py
app/pages/: analytics.py  cutoff_simulator.py  model_performance.py  monitoring.py
configs/: costs.yaml  features.yaml  storage.yaml
pipelines/: run_analytics.py  run_data_science.py  run_full_pipeline.py
src/: advanced_features.py  cutoff_analysis.py  feature_engineering.py  feature_importance.py  interpretation.py  split.py  summary.py  train_lr.py  transformers.py  upload_raw.py
src/monitoring/: __init__.py  loss_alerts.py  performance.py  psi.py
src/utils/: io.py
